# macos-playbooks

./: Makefile  README.md  ansible.cfg  pyproject.toml
inventory/: hosts.yml
inventory/group_vars/: all.yml
playbooks/: playbook.yml
roles/applications/defaults/: main.yml
roles/applications/tasks/: main.yml
roles/dotfiles/tasks/: main.yml
roles/fish/tasks/: fisher_plugins.yml  main.yml
roles/fonts/tasks/: main.yml
roles/macos/tasks/: main.yml
roles/rust_clis/tasks/: main.yml
