[tool.poetry]
name = "osx-playbooks"
version = "0.1.0"
description = "osx-playbooks"
authors = ["Hiroya-W <hyuyukun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ansible = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
